--- a/InterfazWidgetL2/app/src/main/res/values/strings.xml
+++ b/InterfazWidgetL2/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">InterfazWidgetL2</string>
+    <string name="texto_widget">Bienvenidos a nextu</string>
 </resources>
