--- a/EvFinal2/app/src/main/res/values/strings.xml
+++ b/EvFinal2/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="string_error">Error: </string>
     <string name="string_error_empty_field">empty field</string>
     <string name="string_error_wrong_field">wrong data</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="string_subtitle_widget">Sergio Rojas</string>
+    <string name="string_title_widget">Evaluacion Final 2</string>
 </resources>
