--- a/AdicionandoFragmentosDinamicos/app/src/main/res/values/strings.xml
+++ b/AdicionandoFragmentosDinamicos/app/src/main/res/values/strings.xml
@@ -1,13 +1,10 @@
 <resources>
     <string name="app_name">AdicionandoFragmentosDinamicos</string>
+    <string name="string_btn_mostrar">Mostrar</string>
 
     <string-array name="contactos_email">
-        <item>Diego Buitrago</item>
-        <item>Carlos Alfonso</item>
-        <item>Maritza Pineda</item>
-        <item>Harold Castro</item>
-        <item>Carlos Ramirez</item>
-        <item>Lina Cabrera</item>
-        <item>Karen Rodriguez</item>
+        <item>Daniel Gomez</item>
+        <item>Wilson Puerto</item>
+        <item>Daniela Martinez</item>
     </string-array>
 </resources>
