--- a/InternationalizationU4W4/app/src/main/res/values/strings.xml
+++ b/InternationalizationU4W4/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">InternationalizationU4W4</string>
+    <string name="app_name">Internacionalización</string>
+    <string name="txt_main_content">Practicando intenacionalización</string>
+    <string name="btn_start">Inicio</string>
 </resources>
