EvFinal4 - application finished

--- a/EvaluacionFinal4/app/src/main/res/values-en/strings.xml
+++ b/EvaluacionFinal4/app/src/main/res/values-en/strings.xml
@@ -2,13 +2,14 @@
 <resources>
     <string name="app_name">Final Evaluation 4</string>
     <string name="circle_title">Draw Circle</string>
-    <string name="circle_subtitle">Here you will be able to draw circles in different sizes</string>
+    <string name="circle_subtitle">Here you will be able to draw circles</string>
     <string name="square_title">Draw Square</string>
-    <string name="square_subtitle">Here you will be able to draw squares in different sizes</string>
+    <string name="square_subtitle">Here you will be able to draw squares</string>
     <string name="oval_title">Draw Oval</string>
-    <string name="oval_subtitle">Here you will be able to draw ovals in different sizes</string>
+    <string name="oval_subtitle">Here you will be able to draw ovals</string>
     <string name="rectangle_title">Draw Rectangle</string>
-    <string name="rectangle_subtitle">Here you will be able to draw rectangles in different sizes</string>
+    <string name="rectangle_subtitle">Here you will be able to draw Rectangles</string>
     <string name="free_title">Free Drawing</string>
     <string name="free_subtitle">Here you will be able to draw any form</string>
+    <string name="subtitle_complement">by pressing the screen</string>
 </resources>
