DialogW1M5 - first exercise done

--- a/DialogW1M5/app/src/main/res/values/strings.xml
+++ b/DialogW1M5/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DialogW1M5</string>
+    <string name="string_btn_main">Generate alerts</string>
 </resources>
