--- a/WebViewW1M1/app/src/main/res/values/strings.xml
+++ b/WebViewW1M1/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WebViewW1M1</string>
+    <string name="string_btn_navigate">Navigate</string>
 </resources>
