arrow back on toolbar

--- a/GoodPracticesToolbars/app/src/main/res/values/strings.xml
+++ b/GoodPracticesToolbars/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-  <string name="app_name">Good Practices Toolbars</string>
+    <string name="app_name">Good Practices Toolbars</string>
     <string name="btn_apply">Aplicar Color</string>
-  <string name="btn_default">Reiniciar Color</string>
+    <string name="btn_default">Reiniciar Color</string>
+    <string name="txt_second">Just go back</string>
+    <string name="btn_second">Go Second</string>
 </resources>
