--- a/NavigationDrawerIntro/app/src/main/res/values/strings.xml
+++ b/NavigationDrawerIntro/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Navigation Drawer Intro</string>
+
+    <string name="open_drawer">Abrir cajón</string>
+    <string name="close_drawer">Cerrar cajón</string>
 </resources>
