test for new nav drawer and tab layout implementation

--- a/EvaluacionFinal5/app/src/main/res/values/strings.xml
+++ b/EvaluacionFinal5/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Evaluacion Final 5</string>
+    <string name="_facebook">Facebook</string>
+    <string name="_home">Inicio</string>
+    <string name="_instagram">Instagram</string>
+    <string name="_gplus">Google +</string>
+    <string name="_twitter">Twitter</string>
+    
+    <string name="open_drawer">Open Drawer</string>
+    <string name="close_drawer">Close Drawer</string>
+    
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
