--- a/EvaluacionFinal6/app/src/main/res/values/strings.xml
+++ b/EvaluacionFinal6/app/src/main/res/values/strings.xml
@@ -6,12 +6,19 @@
     <string name="_user_name">Nombre de usuario</string>
     <string name="_password">Contraseña</string>
     <string name="_remember">Recordarme</string>
-    <string name="_login">Inicir Sesión</string>
+    <string name="_login">Iniciar Sesión</string>
     <string name="_parking">Parqueos</string>
     <string name="_my_account">Mi Cuenta</string>
     <string name="_user">User</string>
-    <string name="user_email_example">user@example.com</string>
+    <string name="_email_example">\@example.com</string>
     <string name="open_drawer">open</string>
     <string name="close_drawer">close</string>
     <string name="error_empty_field">Debe llenar este campo</string>
+    <string name="remeber_disabled">Su sesión no permanecera abierta</string>
+    
+    <string name="pref_new_username">Cambiar el nombre con el que se identifica en la aplicación</string>
+    <string name="pref_title_new_username">Nombre de usuario</string>
+    <string name="pref_new_password">Cambiar clave para ingresar en la app</string>
+    <string name="pref_email_notify">Recibir notificación en su correo electrónico</string>
+    <string name="pref_title_email_notify">Notificacion por correo electrónico</string>
 </resources>
