all is done except for the filter for current users

--- a/EvaluacionFinal7/app/src/main/res/values/strings.xml
+++ b/EvaluacionFinal7/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="main_successDonorRegistered">El donante ha sido registrado</string>
     <string name="cardDonorMenu_edit">Editar</string>
     <string name="cardDonorMenu_delete">Eliminar</string>
+    <string name="main_successDonorUpdated">El usuario ha sido actualizado</string>
 </resources>
